# RAG_Assistant

./: .gitignore  Start-Dev.ps1
backend/: .env.example  pyproject.toml  requirements.txt  test.py
backend/app/: __init__.py  main.py
backend/app/config/: db.py
backend/app/routes/: ingest.py  query.py
backend/app/services/: chunker.py  embedding_service.py  groq_service.py  pdf_parser.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js
frontend/src/components/: ChatPanel.jsx  UploadPanel.jsx
